Logo size, buttons

--- a/src/styles/components/_logo.scss
+++ b/src/styles/components/_logo.scss
@@ -3,6 +3,9 @@
     margin: 1.6rem auto 1.2rem auto;
     text-align: center;
 
+    display: block;
+    max-width: 480px;
+
     &__img {
         max-width: 100%;
         height: auto;
