--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -3,24 +3,7 @@ body {
 }
 
 .wrapper {
-    max-width: 280px;
+    width: 90%;
+    max-width: 768px;
     margin: 0 auto;
-}
-
-@media (min-width: 480px) {
-    .wrapper {
-        max-width: 420px;
-    }
-}
-
-@media (min-width: 640px) {
-    .wrapper {
-        max-width: 580px;
-    }
-}
-
-@media (min-width: 768px) {
-    .wrapper {
-        max-width: 700px;
-    }
 }
