description, logo size

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -5,10 +5,12 @@
         width: 50%;
         display: inline-block;
         
+        text-align: center;
+
         img {
-            max-width: 100%;
+            max-width: 80%;
             height: auto;
         }
-        
+    
     }
 } 
